fix: table overflow

--- a/src/design-tokens.css
+++ b/src/design-tokens.css
@@ -323,9 +323,9 @@
   --brand-border-strong: #70757A;
   --brand-border-inverse: #FFFFFF;
   --semantic-primary-default: #2563EB;
-  --semantic-primary-hover: #DBA219;
-  --semantic-primary-active: #B78211;
-  --semantic-primary-focus: #FFC523;
+  --semantic-primary-hover: #0D3CB5;
+  --semantic-primary-active: #082A92;
+  --semantic-primary-focus: #1351D8;
   --semantic-primary-disabled: #2563EB;
   --semantic-secondary-default: #0B1529;
   --semantic-secondary-hover: #14234D;
@@ -447,19 +447,19 @@
   --component-avatar-badge-size-width: 16px;
   --component-avatar-badge-size-height: 16px;
   --component-button-primary-background-default: #2563EB;
-  --component-button-primary-background-hover: #DBA219;
+  --component-button-primary-background-hover: #0D3CB5;
   --component-button-primary-background-disabled: #2563EB;
   --component-button-primary-text-default: #1E1F20;
   --component-button-primary-text-hover: #1E1F20;
   --component-button-primary-text-disabled: #1E1F20;
   --component-button-primary-text-loading: #1E1F20;
   --component-button-primary-border-default: #2563EB;
-  --component-button-primary-border-hover: #DBA219;
-  --component-button-primary-border-focus: #FFC523;
+  --component-button-primary-border-hover: #0D3CB5;
+  --component-button-primary-border-focus: #1351D8;
   --component-button-primary-border-disabled: #2563EB;
   --component-button-primary-box-shadow-default: none;
   --component-button-primary-box-shadow-hover: none;
-  --component-button-primary-box-shadow-focus: 0 0 0 2px #FFC523;
+  --component-button-primary-box-shadow-focus: 0 0 0 2px #1351D8;
   --component-button-primary-opacity-default: 1;
   --component-button-primary-opacity-disabled: 0.5;
   --component-button-primary-border-radius: 9999px;
